src/sass/60_components/_components.form.scss
.c-form {
  $c-form: &;

  position: relative;
  scroll-margin-top: calc($mobile-header-height + $mobile-section-padding-top);
  scroll-snap-align: start;
  display: flex;
  flex-direction: column;
  gap: 2.5rem;
  @include media-breakpoint-up(xl) {
    scroll-margin-top: calc(
      $mobile-header-height + $desktop-section-padding-top
    );
  }
  @include media-breakpoint-up(xxl) {
    scroll-margin-top: calc(
      $desktop-header-height + $desktop-section-padding-top
    );
    gap: 2rem;
  }

  &__property-context {
  }

  &__fieldset {
    display: flex;
    flex-direction: column;
    gap: 2.5rem;
    padding: 1.5rem;
    background-color: var(--oo-color-bg);

    @include media-breakpoint-up(xl) {
      grid-template-columns: repeat(2, minmax(0, 1fr));
    }

    @include media-breakpoint-down(xs) {
      padding: 1rem;
    }

    // add more margin to button if there is no read-more
    &:not(:has(.c-read-more)) {
      #{$c-form}__button {
        margin-top: 0;
        @include media-breakpoint-up(xl) {
          margin-top: 1rem;
        }
      }
    }
  }

  &__header {
    font-size: 1.5rem;
    margin-bottom: 2.5rem;
    display: flex;
    align-items: center;
    justify-content: space-between;
    position: relative;

    grid-column: span 2;

    .--bg-light & {
      color: var(--oo-color-light-headline, var(--oo-color-headline));
    }

    .--bg-dark & {
      color: var(--oo-color-dark-headline, var(--oo-color-headline));
    }

    .--bg-primary & {
      color: var(--oo-color-primary-headline, var(--oo-color-headline));
    }

    .--bg-secondary & {
      color: var(--oo-color-secondary-headline, var(--oo-color-headline));
    }

    .--bg-footer & {
      color: var(--oo-color-footer-text, var(--oo-color-text));
    }

    .--bg-transparent & {
      color: var(--oo-color-headline);
    }
  }

  &__body {
    display: grid;
    grid-template-columns: minmax(0, 1fr);
    gap: 1.5rem 2rem;
    align-items: flex-end;

    @include media-breakpoint-up(md) {
      grid-template-columns: repeat(2, minmax(0, 1fr));
    }
  }

  &__legend {
    color: var(--oo-color-headline);
    font-size: $mobile-h3-font-size;
    line-height: $mobile-h3-line-height;
    font-family: $font-family-headline;
    font-weight: $font-weight-headline;
    display: inline-block;

    @include media-breakpoint-up(sm) {
      font-size: $desktop-h3-font-size;
      line-height: $desktop-h3-line-height;
    }

    .--bg-light & {
      color: var(--oo-color-light-headline, var(--oo-color-headline));
    }

    .--bg-dark & {
      color: var(--oo-color-dark-headline, var(--oo-color-headline));
    }

    .--bg-primary & {
      color: var(--oo-color-primary-headline, var(--oo-color-headline));
    }

    .--bg-secondary & {
      color: var(--oo-color-secondary-headline, var(--oo-color-headline));
    }

    .--bg-footer & {
      color: var(--oo-color-footer-text, var(--oo-color-text));
    }

    .--bg-transparent & {
      color: var(--oo-color-headline);
    }
  }

  &__required {
    position: absolute;
    right: 0;
    bottom: -2.5rem; // must match fieldset gap
    font-size: 0.875rem;
  }

  &__more {
    display: none;
  }

  &__field-wrapper {
    display: contents;
  }

  &__button-wrapper {
  }

  &_button {
  }

  // Remove honeypot field from frontend
  .message {
    display: none !important;
  }

  .--is-single-select {
  }
  .--is-multiple-select {
  }
  .--is-input {
  }
  .--is-textarea {
    @include media-breakpoint-up(md) {
      grid-column: span 2;
    }
  }
  .--is-range:has(*:nth-child(2)) {
    @include media-breakpoint-up(md) {
      grid-column: span 2;
    }
  }
  .--is-boolean {
    @include media-breakpoint-up(md) {
      grid-column: span 2;
    }
  }

  &.--is-interest-form {
  }
  &.--is-owner-form {
  }
  &.--is-contact-form {
  }
  &.--is-newsletter-form {
  }

  &.--is-owner-leadgenerator-form {
    #{$c-form}__header {
      // Hide this element on large screens and up (desktop).
      &.--is-mobile-only {
        @include media-breakpoint-up(md) {
          display: none;
        }
      }

      #{$c-form}__legend {
      }
    }

    #{$c-form}__progress {
      position: absolute;
      @include media-breakpoint-only(xs) {
        right: 1rem;
        top: 1rem;
      }

      @include media-breakpoint-only(sm) {
        right: 1.5rem;
        top: 1rem;
      }

      @include media-breakpoint-up(md) {
        left: 50%;
        transform: translate(-50%, 50%);
      }

      .--bg-light & {
        color: var(--oo-color-light-headline, var(--oo-color-headline));
      }

      .--bg-dark & {
        color: var(--oo-color-dark-headline, var(--oo-color-headline));
      }

      .--bg-primary & {
        color: var(--oo-color-primary-headline, var(--oo-color-headline));
      }

      .--bg-secondary & {
        color: var(--oo-color-secondary-headline, var(--oo-color-headline));
      }

      .--bg-footer & {
        color: var(--oo-color-footer-text, var(--oo-color-text));
      }

      .--bg-transparent & {
        color: var(--oo-color-headline);
      }
    }

    .c-selectable-cards {
      gap: 2rem;
    }

    #{$c-form}__button {
      margin-top: 0;
    }

    #{$c-form}__wrapper {
      display: flex;
      flex-direction: column;
      gap: 2.5rem;

      @include media-breakpoint-up(md) {
        .leadform-forward,
        .leadform-submit {
          margin-left: auto;
        }
        gap: 5rem;
      }

      &.--bg-transparent {
        background-color: var(--oo-color-bg);
      }

      &.--bg-light {
        background-color: var(--oo-color-light-bg, var(--oo-color-bg));
      }

      &.--bg-dark {
        background-color: var(--oo-color-dark-bg, var(--oo-color-bg));
      }

      &.--bg-primary {
        background-color: var(--oo-color-primary-bg, var(--oo-color-bg));
      }

      &.--bg-secondary {
        background-color: var(--oo-color-secondary-bg, var(--oo-color-bg));
      }
    }

    #{$c-form}__button-wrapper {
      @include media-breakpoint-up(md) {
        display: flex;
        justify-content: space-between;
      }
      @include media-breakpoint-down(sm) {
        display: flex;
        flex-direction: column;
        align-content: space-between;
        gap: 1.5rem;
      }
    }

    #{$c-form}__fieldset {
      .c-form__field-group + .c-form__field-group {
        margin-top: 2rem;
      }
      .c-form__field-group:has(.--is-boolean)
        + .c-form__field-group:has(.--is-boolean) {
        margin-top: 0rem;
      }

      .c-form__field-group:has(
          .o-label[data-icon-button-group]:not([style*='display: none']):not(
              [style*='display:none']
            )
        ) {
        // Force these specific groups to span all columns of the parent grid.
        grid-column: 1 / -1;
      }

      .c-form__field-group:has(.o-label.--is-textarea) {
        // Force textarea groups to span all columns of the parent grid.
        grid-column: 1 / -1;
      }

      .c-form__field-group:has(.o-label.--is-boolean) {
        // Force boolean groups to span all columns of the parent grid.
        grid-column: 1 / -1;
      }

      .c-form__field-group .o-control {
        margin-top: 0;
      }
    }

    .o-label[data-icon-button-group] {
      display: grid;
      gap: 1rem; // Space between label and cards
      position: relative;

      .c-selectable-cards {
        display: grid;
        grid-template-columns: 1fr 1fr;
        gap: 2rem;

        &.--has-selection .c-selectable-card:not(.--is-selected) {
          opacity: 0.5;
        }
      }
    }
    #{$c-form}__required {
      display: flex;
      justify-content: flex-end;
    }
  }

  &.--is-search-form {
    #{$c-form}__body {
      @include media-breakpoint-up(md) {
        grid-template-columns: repeat(2, minmax(0, 1fr));
      }
      @include media-breakpoint-up(xl) {
        grid-template-columns: repeat(3, minmax(0, 1fr));
      }
    }
    #{$c-form}__button-wrapper {
      grid-column: auto;
      display: flex;
      justify-content: flex-end;
      align-items: flex-end;
    }
    #{$c-form}__button {
      flex-grow: 1;
    }
    .--is-range {
      @include media-breakpoint-up(xl) {
        grid-column: auto;
      }
    }
    .--is-boolean {
      @include media-breakpoint-up(xl) {
        grid-column: auto;
      }
    }
  }

  &.--is-banner-search-form {
    width: 100%;
    #{$c-form}__body {
      scroll-margin-top: calc(
        $mobile-header-height + $mobile-section-padding-top
      );
      scroll-snap-align: start;
      @include media-breakpoint-up(md) {
        grid-template-columns: repeat(2, minmax(0, 1fr));
      }
      @include media-breakpoint-up(xl) {
        grid-template-columns: repeat(3, minmax(0, 1fr));
        scroll-margin-top: calc(
          $mobile-header-height + $desktop-section-padding-top
        );
      }
      @include media-breakpoint-up(xxl) {
        scroll-margin-top: calc(
          $desktop-header-height + $desktop-section-padding-top
        );
      }
    }
    #{$c-form}__more {
      display: block;
      margin-top: -1rem;
      transition: margin-top 0.25s ease-in-out;
      @include media-breakpoint-up(md) {
        display: none;
        margin-top: 0;
      }
      &.--is-open {
        margin-top: 0;
      }
    }
    #{$c-form}__field-wrapper {
      display: grid;
      grid-template-columns: minmax(0, 1fr);
      gap: 1.5rem;
      max-height: 0px;
      overflow: hidden;
      transition: max-height 0.25s ease-in-out;
      @include media-breakpoint-up(md) {
        display: contents;
      }

      &.--is-open {
        max-height: 100rem;
      }
    }
    #{$c-form}__button-wrapper {
      grid-column: auto;
      display: flex;
      justify-content: flex-end;
      align-items: flex-end;
    }
    #{$c-form}__button {
      flex-grow: 1;
    }
    .--is-range {
      @include media-breakpoint-up(xl) {
        grid-column: auto;
      }
    }
    .--is-boolean {
      @include media-breakpoint-up(xl) {
        grid-column: auto;
      }
    }
  }

  &.--is--popup {
    #{$c-form}__fieldset {
      gap: 1.5rem;
    }

    // Sticky Pop-up
    .--is-widget.--is-sticky & {
      #{$c-form}__fieldset {
        grid-template-columns: minmax(0, 1fr);
        gap: 1rem;

        & > * {
          // remove grid-column: span 2 for all elements
          grid-column: auto;
        }
      }
    }
  }

  .--bg-light & {
    #{$c-form}__fieldset {
      background-color: var(--oo-color-light-bg, var(--oo-color-bg));
    }
  }

  .--bg-dark & {
    #{$c-form}__fieldset {
      background-color: var(--oo-color-dark-bg, var(--oo-color-bg));
    }
  }

  .--bg-primary & {
    #{$c-form}__fieldset {
      background-color: var(--oo-color-primary-bg, var(--oo-color-bg));
    }
  }

  .--bg-secondary & {
    #{$c-form}__fieldset {
      background-color: var(--oo-color-secondary-bg, var(--oo-color-bg));
    }
  }

  .--bg-footer & {
    #{$c-form}__body {
      grid-template-columns: minmax(0, 1fr);
      gap: 1rem;

      & > * {
        // remove grid-column: span 2 for all elements
        grid-column: auto;
      }
    }
    #{$c-form}__header {
      flex-direction: column;
      align-items: flex-start;
      gap: 0.5rem;
    }
    #{$c-form}__required {
      align-self: flex-end;
    }

    #{$c-form}__fieldset {
      background-color: var(--oo-color-footer-bg, var(--oo-color-bg));
    }
  }

  &.--bg-transparent {
    #{$c-form}__fieldset {
      background-color: var(--oo-color-bg);
    }
  }
}

.lead-lightbox {
  @include media-breakpoint-up(md) {
    gap: 0 2rem;
    display: grid;
    grid-template-columns: 1fr 1fr;
  }
}

